--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.VacationApp"
         tools:targetApi="31">
         <activity
+            android:name=".main.UI.VacationExcursionDetails"
+            android:exported="false" />
+        <activity
             android:name=".main.UI.ExcursionDetails"
             android:exported="false" />
         <activity
