--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,9 +13,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.VacationApp"
         tools:targetApi="31">
-        <activity
-            android:name=".main.UI.VacationExcursionDetails"
-            android:exported="false" />
+        <receiver
+            android:name=".main.UI.MyReceiver"
+            android:enabled="true"
+            android:exported="true"></receiver>
         <activity
             android:name=".main.UI.ExcursionDetails"
             android:exported="false" />
